# notes-mvp

./: .env.example  .gitignore  ESTRUCTURA.md  Makefile  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pytest.ini  tailwind.config.js
.claude/: CLAUDE.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_google_auth.py
backend/app/: config.py  database.py  main.py
backend/app/agent/: runtime.py  state.py
backend/app/agent/graphs/: iris.py
backend/app/agent/tools/: context_tools.py  note_tools.py
backend/app/api/v1/: __init__.py  auth.py  categories.py  notes.py
backend/app/core/: deps.py  security.py
backend/app/models/: __init__.py  category.py  note.py  user.py
backend/app/schemas/: __init__.py  auth.py  category.py  note.py  user.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  default.conf  default.conf.template  nginx.conf
docs/vibe_trace/: agents.md  changelog.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: 15-detect-dns-resolver.envsh  entrypoint-backend.sh  entrypoint-frontend.sh  init-db.sh
src/: App.tsx  index.css
src/components/: CategoryBadge.tsx  CategoryManager.tsx  Layout.tsx  NoteCard.tsx  NoteEditor.tsx  QuickCapture.tsx  SearchBar.tsx  Sidebar.tsx  ThemeToggle.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useCategories.ts  useLocalStorage.ts  useNotes.ts
src/utils/: helpers.ts
(+31 files in other folders)
